# grab-bazel-common

./: .bazelrc  .editorconfig  .gitignore  BUILD.bazel  CODEOWNERS  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  bazel_common_maven_install.json  dagger.bzl  main.bazelproject  workspace_defs.bzl
.github/workflows/: ci.yml
android/: initialize.bzl  maven.bzl  repositories.bzl
android/test/: instrumentation.bzl
android/tools/: BUILD.bazel  defs.bzl
docs/: Dependencies.md
patches/bazel/: README.md  android-resource-workers.patch  databinding-caching.patch  databinding-hang-fix.patch  databinding-layout-info-caching.patch  disable-resource-conflicts.patch  mobile-install-crash-fix.patch
patches/databinding/: README.md  databinding-fixes.patch
project_views/: Pin Artifacts.run.xml  Run all tests.run.xml  default.bazelproject
rules/: defs.bzl  repositories.bzl  setup.bzl
rules/android/: android_binary.bzl  android_library.bzl  resources.bzl
rules/android/compose/: BUILD.bazel
rules/android/databinding/: databinding.bzl
rules/android/private/: resource_merger.bzl
rules/kotlin/: kotlin.bzl
src/main/starlark/test/: AndroidTestManifest.xml.tpl  BUILD.bazel  (+1 more)
toolchains/: toolchains.bzl
tools/aapt_lite/: BUILD
tools/aapt_lite/src/main/java/com/grab/aapt/: AaptLiteCommand.kt  AaptLiteComponent.kt  BUILD.bazel  main.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/binding/: BUILD.bazel  BindingClassModule.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/binding/generator/: BindingClassGenerator.kt  DatabiningComponent.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/binding/model/: BUILD.bazel  Models.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/binding/parser/: LayoutBindingsParser.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/binding/store/: BindingClassJsonParser.kt  LayoutTypeStore.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/brclass/: BUILD.bazel  BrClassGenerator.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/common/: BUILD.bazel  Constants.kt  Generator.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/di/: AaptScope.kt  BUILD.bazel
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/mapper/: BUILD.bazel  GenerateDatabindingMapper.kt  MapperComponent.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/rclass/: BUILD.bazel  ResToRClassModule.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/rclass/generator/: RClassGenerator.kt  ResToRClassGenerator.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/rclass/parser/: RTxtParser.kt  ResToRParser.kt  ResourceFileParser.kt  XmlEntry.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/rclass/parser/xml/: ArrayParser.kt  DeclareStyleableParser.kt  DefaultXmlParser.kt  IDParser.kt  StyleParser.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/util/: BUILD.bazel  String.kt  Utils.kt  WorkingDirectory.kt  XmlPullParser.kt
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/util/jars/: BUILD.bazel  JarHelper.kt  SourceJarCreator.kt  SrcJarPackager.kt
tools/android/: BUILD.bazel
tools/android-mock/: BUILD.bazel
tools/android-mock/src/main/java/com/grab/test/: GeneratorCommand.kt
tools/auto-service/: BUILD.bazel
tools/bazel_lib/: BUILD.bazel
tools/binding-adapter-bridge/: BUILD.bazel  README.md
tools/binding-adapter-bridge/src/main/java/com/grab/pax/binding/processor/: BindingAdapterProcessor.kt
tools/binding-adapter-bridge/src/test/java/com/grab/pax/binding/processor/: AllTests.kt  BindingAdapterProcessorTest.kt  GeneratedMethodsTest.kt
tools/build_config/: BUILD  build_config.bzl
tools/build_config/src/main/java/com/grab/buildconfig/: BUILD.bazel  BuildConfigGenerator.kt  GeneratorCommand.kt  main.kt
tools/buildifier/: BUILD.bazelbuild_buildtools_buildifier.bazel.tpl  buildifier_binary.bzl  defs.bzl  repository.bzl  toolchains.bzl
tools/custom_res/: custom_res.bzl
tools/databinding/: databinding.bzl  databinding_aar.bzl  databinding_classinfo.bzl  databinding_r_deps.bzl  databinding_stubs.bzl  utils.bzl
tools/db-compiler-lite/: BUILD
tools/java/: java_library_no_header.bzl
tools/kotlin/: BUILD  android.bzl
tools/maven/: BUILD.bazel
tools/maven/src/main/kotlin/com/grab/maven/: MavenInstallPin.kt  PinningTarget.kt  WorkspaceUpdater.kt
tools/mockable-jar-generator/: BUILD.bazel
tools/mockable-jar-generator/src/main/java/com/grab/test/: GeneratorCommand.kt  MockableJarGenerator.kt  main.kt
tools/parcelize/: parcelize.bzl
tools/res_value/: BUILD  res_value.bzl
tools/test/: BUILD.bazel  mockable_android_jar.bzl  multi_test.bzl  runtime_resources.bzl  test.bzl
tools/test-suite/: BUILD.bazel
tools/test-suite-generator/: BUILD.bazel  README.md
tools/test-suite-generator/src/main/java/com/grab/pax/test/processor/: TestSuiteExporter.kt  TestSuiteGenerator.kt
tools/test-suite-generator/src/test/java/com/grab/pax/test/processor/: TestSuiteGeneratorTest.kt
tools/test-suite/src/main/java/com/grab/test/: AllTests.kt  Classpath.kt  ClasspathSuite.kt  CustomSuite.kt  TestSuiteBuilder.kt
tools/test/android/: BUILD.bazel
tools/test/android/src/main/java/com/grab/test/: TestActivity.kt
tools/test/android/src/test/java/com/grab/test/: SimpleActivityTest.kt
tools/test/internal/: BUILD.bazel
tools/test/jvm/: BUILD.bazel
tools/test/jvm/src/main/java/com/grab/test/: SampleClass.kt
tools/test/jvm/src/test/java/com/grab/test/: Ignored.kt  Sample2Test.kt  SampleTest.kt
tools/worker/: BUILD.bazel
tools/worker/src/main/kotlin/io/bazel/: ProtoWorkerMessageProcessor.java  Work.kt  WorkRequestHandler.java  WorkResult.kt  Worker.kt
tools/worker/src/main/kotlin/io/bazel/streams/: Streams.kt  WorkerStreams.kt
tools/worker/src/main/kotlin/io/bazel/value/: WorkRequest.kt  WorkResponse.kt
tools/worker/src/main/proto/: BUILD.bazel
tools/worker/src/test/kotlin/io/bazel/: WorkerTest.kt
tools/worker/test_worker/: BUILD.bazel
tools/worker/test_worker/src/main/kotlin/com/grab/: SimpleWorker.kt
(+75 files in other folders)
