load("@bazel_common_dagger//:workspace_defs.bzl", "dagger_rules")
load("@io_bazel_rules_kotlin//kotlin:core.bzl", "define_kt_toolchain", "kt_javac_options", "kt_kotlinc_options")

kt_kotlinc_options(
    name = "kt_kotlinc_options",
)

kt_javac_options(
    name = "kt_javac_options",
)

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.6",
    experimental_multiplex_workers = True,
    experimental_report_unused_deps = "off",
    experimental_strict_kotlin_deps = "off",
    experimental_use_abi_jars = True,
    javac_options = "//:kt_javac_options",
    jvm_target = "11",
    kotlinc_options = "//:kt_kotlinc_options",
    language_version = "1.6",
)

dagger_rules(
    repo_name = "@bazel_common_maven",
)

load("@grab_bazel_common//toolchains:toolchains.bzl", "configure_toolchains")

configure_toolchains()
