module(name = "grab_bazel_common", version = "1.0")

bazel_dep(name = "rules_kotlin", version = "1.9.1")
bazel_dep(name = "rules_android", version = "0.1.1")

bazel_dep(name = "rules_jvm_external")
git_override(
    remote = "https://github.com/brocollie08/rules_jvm_external.git",
    # bazel-6 branch
    commit = "e8cd402df87c0939d2a28fe5154247fc431b9f51",
    module_name = "rules_jvm_external",
)
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        # "com.android.tools.lint:lint:31.5.0-alpha02",
        # "com.android.tools.lint:lint-checks:31.5.0-alpha02",
        # "com.android.tools.lint:lint-api:31.5.0-alpha02",
        "com.google.guava:guava:29.0-jre",
        "com.google.auto:auto-common:0.10",
        "com.google.auto.service:auto-service:1.0-rc6",
        "com.google.protobuf:protobuf-java:3.6.0",
        "com.google.protobuf:protobuf-java-util:3.6.0",
        "io.reactivex.rxjava3:rxjava:3.0.12",
        "com.squareup.moshi:moshi-kotlin:1.14.0",
        "com.squareup.okio:okio-jvm:3.2.0",
        "com.squareup:javapoet:1.13.0",
        "com.github.ajalt:clikt:2.8.0",
        "org.ow2.asm:asm:6.0",
        "org.ow2.asm:asm-tree:6.0",
        "xmlpull:xmlpull:1.1.3.1",
        "net.sf.kxml:kxml2:2.3.0",
        "com.squareup.moshi:moshi:1.11.0",
        # "org.jetbrains.kotlin:kotlin-stdlib:1.8.10",
        # "org.jetbrains.kotlin:kotlin-parcelize-compiler:1.8.10",
        # "org.jetbrains.kotlin:kotlin-parcelize-runtime:1.8.10",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4",
        "com.github.tschuchortdev:kotlin-compile-testing:1.5.0",
        "com.google.android.material:material:1.2.1",
        "javax.inject:javax.inject:1",
        "junit:junit:4.13",
        "org.json:json:20210307",
        # "org.jetbrains.kotlin:kotlin-parcelize-compiler:1.8.10",
        # "org.jetbrains.kotlin:kotlin-parcelize-runtime:1.8.10",
        "androidx.compose.compiler:compiler:1.4.3",
        "androidx.annotation:annotation:1.5.0",
        "androidx.databinding:databinding-adapters:7.2.2",
        "androidx.databinding:databinding-common:7.2.2",
        "androidx.databinding:databinding-runtime:7.2.2",
        "androidx.databinding:viewbinding:7.2.2",
        "org.json:json:20210307",
        "junit:junit:4.13.2",
        "com.google.dagger:dagger:2.46.1",
        "com.google.dagger:dagger-compiler:2.46.1",
        "com.google.dagger:dagger-producers:2.46.1",
        "com.google.dagger:dagger-spi:2.46.1",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://maven.google.com/",
        "https://plugins.gradle.org/m2/",
        "https://jcenter.bintray.com/",
        "https://jitpack.io/",
        "https://oss.sonatype.org/content/repositories/snapshots",
    ],
)
use_repo(maven, "maven")

remote_android_extensions = use_extension("@bazel_tools//tools/android:android_extensions.bzl", "remote_android_tools_extensions")
use_repo(remote_android_extensions, "android_gmaven_r8")
