load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")

kt_jvm_library(
    name = "mockable-android-jar-lib",
    srcs = glob([
        "src/main/java/**/*.kt",
    ]),
    visibility = [
        "//visibility:private",
    ],
    deps = [
        "@com_github_jetbrains_kotlin//:kotlin-stdlib-jdk8",
        "@maven//:com_github_ajalt_clikt",
        "@maven//:org_ow2_asm_asm",
        "@maven//:org_ow2_asm_asm_tree",
    ],
)

java_binary(
    name = "mocked-android-jar",
    main_class = "com.grab.test.MainKt",
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = [
        ":mockable-android-jar-lib",
    ],
)
