load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library", "kt_jvm_test")

java_plugin(
    name = "auto-service-plugin",
    processor_class = "com.google.auto.service.processor.AutoServiceProcessor",
    deps = [
        "@maven//:com_google_auto_service_auto_service",
    ],
)

java_library(
    name = "auto-service",
    exported_plugins = [":auto-service-plugin"],
    exports = [
        "@maven//:com_google_auto_service_auto_service",
    ],
)

kt_jvm_library(
    name = "binding-adapter-processor",
    srcs = glob([
        "src/main/java/**/*.kt",
    ]),
    deps = [
        ":auto-service",
        "@com_github_jetbrains_kotlin//:kotlin-stdlib-jdk8",
        "@maven//:androidx_databinding_databinding_adapters",
        "@maven//:com_google_auto_auto_common",
        "@maven//:com_google_auto_service_auto_service",
        "@maven//:com_google_guava_guava",
        "@maven//:com_squareup_javapoet",
    ],
)

java_plugin(
    name = "binding-adapter-plugin",
    generates_api = True,
    processor_class = "com.grab.pax.binding.processor.BindingAdapterProcessor",
    deps = [
        ":binding-adapter-processor",
        "@maven//:androidx_databinding_databinding_adapters",
        "@maven//:com_google_auto_service_auto_service",
    ],
)

java_library(
    name = "binding-adapter-bridge",
    exported_plugins = ["binding-adapter-plugin"],
    visibility = ["//visibility:public"],
    exports = [
        "@maven//:androidx_databinding_databinding_adapters",
    ],
)

kt_jvm_test(
    name = "binding-adapter-processor-test",
    size = "small",
    srcs = glob([
        "src/test/java/**/*.kt",
    ]),
    test_class = "com.grab.pax.binding.processor.AllTests",
    deps = [
        ":binding-adapter-bridge",
        ":binding-adapter-processor",
        "@com_github_jetbrains_kotlin//:kotlin-test",
        "@maven//:com_github_tschuchortdev_kotlin_compile_testing",
        "@maven//:junit_junit",
    ],
)
