load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@grab_bazel_common//tools/test:test.bzl", "grab_kt_jvm_test")

kt_jvm_library(
    name = "binding-adapter-processor",
    srcs = glob([
        "src/main/java/**/*.kt",
    ]),
    deps = [
        "//tools/auto-service",
        "@bazel_common_maven//:com_google_auto_auto_common",
        "@bazel_common_maven//:com_google_auto_service_auto_service",
        "@bazel_common_maven//:com_google_guava_guava",
        "@bazel_common_maven//:com_squareup_javapoet",
        "@com_github_jetbrains_kotlin//:kotlin-stdlib-jdk8",
        "@maven//:androidx_databinding_databinding_adapters",
    ],
)

java_plugin(
    name = "binding-adapter-plugin",
    generates_api = True,
    processor_class = "com.grab.pax.binding.processor.BindingAdapterProcessor",
    deps = [
        ":binding-adapter-processor",
        "@bazel_common_maven//:com_google_auto_service_auto_service",
        "@maven//:androidx_databinding_databinding_adapters",
    ],
)

java_library(
    name = "binding-adapter-bridge",
    exported_plugins = ["binding-adapter-plugin"],
    visibility = ["//visibility:public"],
    exports = [
        "@maven//:androidx_databinding_databinding_adapters",
    ],
)

grab_kt_jvm_test(
    name = "binding-adapter-processor-test",
    srcs = glob([
        "src/test/java/**/*.kt",
    ]),
    deps = [
        ":binding-adapter-bridge",
        ":binding-adapter-processor",
        "@bazel_common_maven//:com_github_tschuchortdev_kotlin_compile_testing",
        "@bazel_common_maven//:junit_junit",
        "@com_github_jetbrains_kotlin//:kotlin-test",
    ],
)
