load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "maven_lib",
    srcs = glob([
        "src/main/kotlin/**/*.kt",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//tools/bazel_lib",
        "@bazel_common_maven//:com_github_ajalt_clikt",
    ],
)

java_binary(
    name = "maven_pinner",
    main_class = "com.grab.maven.MavenInstallPinKt",
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = [
        ":maven_lib",
    ],
)
