load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "test-suite",
    srcs = glob([
        "src/main/java/**/*.kt",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@maven//:com_google_guava_guava",
        "@maven//:junit_junit",
    ],
)
