load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@grab_bazel_common//tools/test:test.bzl", "grab_kt_jvm_test")

kt_jvm_library(
    name = "worker_lib",
    srcs = glob([
        "src/main/kotlin/**/*.kt",
        "src/main/kotlin/**/*.java",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//tools/worker/src/main/proto:worker_protocol",
        "@bazel_common_maven//:com_google_protobuf_protobuf_java",
        "@bazel_common_maven//:com_google_protobuf_protobuf_java_util",
        "@bazel_common_maven//:com_squareup_moshi_moshi_kotlin",
        "@bazel_common_maven//:com_squareup_okio_okio_jvm",
        "@bazel_common_maven//:io_reactivex_rxjava3_rxjava",
    ],
)

grab_kt_jvm_test(
    name = "worker_test",
    srcs = glob([
        "src/test/kotlin/**/*.kt",
    ]),
    deps = [
        ":worker_lib",
        "@bazel_common_maven//:junit_junit",
        "@com_github_jetbrains_kotlin//:kotlin-test",
    ],
)
