load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@grab_bazel_common//tools/test:test.bzl", "grab_kt_jvm_test")

kt_jvm_library(
    name = "worker_lib",
    srcs = glob([
        "src/main/kotlin/**/*.kt",
        "src/main/kotlin/**/*.java",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//tools/worker/src/main/proto:worker_protocol",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_protobuf_protobuf_java_util",
        "@maven//:com_squareup_moshi_moshi_kotlin",
        "@maven//:com_squareup_okio_okio_jvm",
        "@maven//:io_reactivex_rxjava3_rxjava",
    ],
)

grab_kt_jvm_test(
    name = "worker_test",
    srcs = glob([
        "src/test/kotlin/**/*.kt",
    ]),
    deps = [
        ":worker_lib",
        "@maven//:junit_junit",
        "@rules_kotlin//kotlin/compiler:kotlin-test",
    ],
)
