load("@grab_bazel_common//rules:defs.bzl", "kt_compiler_plugin", "kt_jvm_library")

kt_compiler_plugin(
    name = "compose-compiler-plugin",
    id = "androidx.compose.compiler",
    target_embedded_compiler = True,
    deps = [
        "@maven//:androidx_compose_compiler_compiler",
    ],
)

kt_jvm_library(
    name = "compose-plugin",
    exported_compiler_plugins = [":compose-compiler-plugin"],
    visibility = ["//visibility:public"],
)
