load("@grab_bazel_common//tools/kotlin:android.bzl", "kt_android_library")
load("@grab_bazel_common//tools/test:test.bzl", "grab_android_local_test")

kt_android_library(
    name = "grab_android_local_test_lib",
    srcs = glob([
        "src/main/java/**/*.kt",
    ]),
)

grab_android_local_test(
    name = "grab_android_local_test",
    srcs = glob([
        "src/test/java/**/*.kt",
    ]),
    associates = [
        ":grab_android_local_test_lib_kt",
    ],
    deps = [
        "@maven//:junit_junit",
    ],
)
