# Kt jvm test complains when no sources are given but deps are given, so pass a dummy
# file to act as trigger
# https://github.com/bazelbuild/rules_kotlin/issues/232
filegroup(
    name = "_empty_kotlin",
    srcs = [
        "Empty.kt",
    ],
    visibility = [
        "//visibility:public",
    ],
)
