load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "buildconfig",
    srcs = glob([
        "*.kt",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//tools/worker:worker_lib",
        "@bazel_common_maven//:com_github_ajalt_clikt",
        "@bazel_common_maven//:com_squareup_javapoet",
    ],
)
