load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "buildconfig",
    srcs = glob([
        "*.kt",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//tools/worker:worker_lib",
        "@maven//:com_github_ajalt_clikt",
        "@maven//:com_squareup_javapoet",
    ],
)
