load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "mapper",
    srcs = glob([
        "*.kt",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:dagger",
        "//tools/aapt_lite/src/main/java/com/grab/aapt/databinding/binding",
        "//tools/aapt_lite/src/main/java/com/grab/aapt/databinding/di:aapt_scope",
        "//tools/aapt_lite/src/main/java/com/grab/aapt/databinding/util/jars",
        "@maven//:com_github_ajalt_clikt",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
    ],
)
