load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "util",
    srcs = glob([
        "*.kt",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:dagger",
        "@maven//:com_squareup_javapoet",
        "@maven//:net_sf_kxml_kxml2",
        "@maven//:xmlpull_xmlpull",
    ],
)
